# DwarForge

./: .gitignore  .pre-commit-config.yaml  README.md  combine_files.py  detect.py  download.py  file_transfer.py  file_transfer_test.py  inference.py  inference_config.yaml  inference_utils.py  kd_tree.py  logging_setup.py  logging_stuff.py  main.py  make_rbg.py  mto.py  plotting.py  postprocess.py  preprocess.py  progress.db  pyproject.toml  requirements.txt  ruff.toml  shutdown.py  sqlite_utils.py  stack_cutouts.py  tile_cutter.py  track_progress.py  transfer_cutouts_to_cloud.py  utils.py  warning_manager.py  zoobot_desi_latents.py  zoobot_desi_latents_parallel.py  zoobot_utils.py
configs/: combination_config.yaml  default.yaml  detection_config.yaml  h5_aggregation_config.yaml  inference_config.yaml
mtolib/: io_mto.py  main.py  postprocessing.py
notebooks/: PlotObjects.ipynb  RandomForest.ipynb  XGBoost-Copy1.ipynb  XGBoost.ipynb  Zoobot_predictions.ipynb  data_accretion.ipynb  data_inspection.ipynb  desi_unions_crossmatch.ipynb  train_unions_dwarfs_kfold.ipynb
notebooks/.ipynb_checkpoints/: RandomForest-checkpoint.ipynb  XGBoost-Copy1-checkpoint.ipynb  XGBoost-checkpoint.ipynb  Zoobot_predictions-checkpoint.ipynb  data_accretion-checkpoint.ipynb  desi_unions_crossmatch-checkpoint.ipynb
scripts/: combination.py  combine_files.py  detection.py  file_transfer.py  h5_aggregation.py  inference.py
src/dwarforge/: combine_files.py  config.py  detection_utils.py  download.py  file_transfer.py  import_utils.py  inference_utils.py  kd_tree.py  make_catalog.py  make_rbg.py  mto.py  plotting.py  postprocess.py  preprocess.py  shutdown.py  sqlite_utils.py  tile_cutter.py  track_progress.py  utils.py  zoobot_desi_latents.py  zoobot_desi_latents_parallel.py  zoobot_utils.py
src/dwarforge/mtolib/: _ctype_classes.py  background.py  io_mto.py  main.py  maxtree.py  postprocessing.py  preprocessing.py  significance_tests.py  tree_filtering.py  utils.py
src/dwarforge/mtolib/src/: main.h  main_double.h  maxtree.h  mt_heap.c  mt_node_test_4.c  mt_objects.c  mt_objects.h  mt_stack.c  mt_stack.h
tables/: all_known_dwarfs_processed.csv  all_known_dwarfs_v2_processed.csv  all_known_dwarfs_v3_processed.csv  all_tiles_gri.csv  class_df.csv  class_df_v2.csv  dwarf_tiles_gri.csv  gri_dwarfs.csv  known_dwarfs_r.csv  missing_tiles.txt  missing_tiles2.txt  smudges.csv  tiles_gri.csv  tiles_gri_group.csv  train_df.csv  training_data_5x_rf.csv  training_data_rf.csv
tests/: test_utils.py
tile_info/: kdtree_xyz.joblib  ps-i_tiles.txt  whigs-g_tiles.txt
